feat(build): fix releases

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "semantic-release-evaluation",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "description": "Testing semantic-release workflow",
   "main": "index.js",
   "scripts": {
-    "prepublish" : "cp ./index.js dist/",
+    "prepublish": "cp ./index.js dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/indieisaoncept/semantic-release-evaluation.git"
+    "url": "https://github.com/indieisaconcept/semantic-release-evaluation.git"
   },
   "keywords": [
     "semantic-release"
@@ -18,10 +18,13 @@
   "author": "indieisaconcept <me@indieisaconcept.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/indieisaoncept/semantic-release-evaluation/issues"
+    "url": "https://github.com/indieisaconcept/semantic-release-evaluation/issues"
   },
-  "homepage": "https://github.com/indieisaoncept/semantic-release-evaluation#readme",
+  "homepage": "https://github.com/indieisaconcept/semantic-release-evaluation#readme",
   "devDependencies": {
+    "@semantic-release/git": "^4.0.2",
+    "@semantic-release/github": "^4.2.12",
+    "@semantic-release/npm": "^3.2.4",
     "semantic-release": "^15.1.7"
   },
   "publishConfig": {
