feat(build): build artefacts
**Product Context**

* Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
  lacinia odio sem nec elit. Sed posuere consectetur est at lobortis.
  Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
  quis risus eget urna mollis ornare vel eu leo.

**Rationale**

* Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
  lacinia odio sem nec elit. Sed posuere consectetur est at lobortis.
  Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
  quis risus eget urna mollis ornare vel eu leo.

**Changes**

* Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
  lacinia odio sem nec elit. Sed posuere consectetur est at lobortis.

* Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
  quis risus eget urna mollis ornare vel eu leo.

* Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
  quis risus eget urna mollis ornare vel eu leo.

**Refs**

* [#123](http://foo.com)
* [#124](http://foo.com)

`#minor`

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testing semantic-release workflow",
   "main": "index.js",
   "scripts": {
-    "prepublish": "cp ./index.js dist/",
+    "build": "cp ./index.js dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "semantic-release": "semantic-release"
   },
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/indieisaconcept/semantic-release-evaluation#readme",
   "devDependencies": {
+    "@semantic-release/changelog": "^2.0.1",
+    "@semantic-release/exec": "^2.2.4",
     "@semantic-release/git": "^4.0.2",
     "@semantic-release/github": "^4.2.12",
     "@semantic-release/npm": "^3.2.4",
